---
source: compiler-core/src/parse/tests.rs
expression: "handle compute() { Return(v) -> v }"
snapshot_kind: text
---
----- SOURCE CODE
handle compute() { Return(v) -> v }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:18
  │
1 │ handle compute() { Return(v) -> v }
  │                  ^ I was not expecting this

Found `{`, expected one of: 
- with
